--- a/cv1-lab-2.ipynb
+++ b/cv1-lab-2.ipynb
@@ -27,17 +27,14 @@
     "\n",
     "<center>\n",
     "\n",
-    "Student1 ID:  \\\n",
-    "Student1 Name: \n",
+    "Student1 ID: 16124006  \\\n",
+    "Student1 Name: Ippokratis Pantelidis \n",
     "\n",
-    "Student2 ID: \\\n",
-    "Student2 Name: \n",
+    "Student2 ID: 16300645 \\\n",
+    "Student2 Name: Robert-Ștefan Sofroni\n",
     "\n",
-    "Student3 ID: \\\n",
-    "Student3 Name: \n",
-    "\n",
-    "( Student4 ID: \\\n",
-    "Student4 Name: )\n",
+    "Student3 ID: 14339617 \\\n",
+    "Student3 Name: Andor Károly Bodgál\n",
     "\n",
     "</center>"
    ]
@@ -225,7 +222,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">*Write your answer here.*"
+    "> ### Convolution vs Correlation\n",
+    ">\n",
+    "> The main difference between correlation and convolution is how one of the signals, specifically `h`, is typically **flipped** during convolution, whereas it remains unchanged during correlation.\n",
+    ">\n",
+    "> ### How are signals treated?\n",
+    ">\n",
+    "> During **convolution**, the signal `h` is flipped before being shifted, and its values are multiplied by those from signal `I` and summed up.\n",
+    ">\n",
+    "> During **correlation**, neither of the signals is flipped before shifting."
    ]
   },
   {
@@ -244,7 +249,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">*Write your answer here.*"
+    "> Correlation and convolution operators are equivalent if and only if the mask **h** is symmetric. To put it mathematically:\n",
+    ">\n",
+    "> $\\mathbf{h}(-k) =  \\mathbf{h}(k) \\text{ for all of k}.$"
    ]
   },
   {
@@ -279,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,6 +308,13 @@
     "        raise ValueError(\"The kernel size must be an odd number. Otherwise, the kernel will not have a center to convolve around.\")\n",
     "\n",
     "    # YOUR CODE HERE\n",
+    "\n",
+    "    kernel_center = kernel_size // 2\n",
+    "\n",
+    "    x = np.arange(-kernel_center, kernel_center + 1)\n",
+    "\n",
+    "    kernel = np.exp(-x / (2 * sigma ** 2))\n",
+    "    kernel = kernel / np.sum(kernel)\n",
     "\n",
     "    return kernel"
    ]
@@ -375,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,6 +407,11 @@
     "    '''\n",
     "\n",
     "    # YOUR CODE HERE\n",
+    "\n",
+    "    kernel_x = gaussian_kernel_1D(sigma_x, kernel_size)\n",
+    "    kernel_y = gaussian_kernel_1D(sigma_y, kernel_size)\n",
+    "\n",
+    "    kernel_2d = np.outer(kernel_x, kernel_y)\n",
     "\n",
     "    return kernel_2d"
    ]
@@ -463,7 +482,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">*Write your answer here.*"
+    "> Both cases will have the same result.\n",
+    ">\n",
+    "> This is because of the separability property of the Gaussian kernels. > This property allows a convolved 2D Gaussian kernel to be expressed as a product of 1D Gaussian kernels. To put it mathematically, we follow Equation A:\n",
+    ">\n",
+    "> $G_{\\sigma}(x, y) = G_{\\sigma}(x) \\times G_{\\sigma}(y)$ "
    ]
   },
   {
@@ -482,7 +505,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">*Write your answer here.*"
+    "> **Case 1: 2D Convolution:** $O(n*m*k^2)$ \n",
+    ">\n",
+    "> **Case 2: Separated 1D Convolutions:** $O(n*m*k)$"
    ]
   },
   {
@@ -519,7 +544,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">*Write your answer here.*"
+    "> ### a) With respect to $x$\n",
+    ">\n",
+    "> $\\frac{d}{dx}G_\\sigma(x,y)$\n",
+    ">\n",
+    "> $\\frac{d}{dx}G_\\sigma(x,y)= \\frac{d}{dx}\\left(\\frac{1}{\\sigma^2 2\\pi}\\exp\\left(-\\frac{x^2 + y^2}{2\\sigma^2}\\right)\\right)$\n",
+    ">\n",
+    "> Let $u = - \\frac{x^2 + y^2}{2\\sigma^2}$\n",
+    ">\n",
+    "> $\\frac{du}{dx} = -\\frac{2x}{2\\sigma^2} = -\\frac{x}{\\sigma^2}$\n",
+    ">\n",
+    "> $\\frac{d}{dx}G_\\sigma(x,y)= \\frac{1}{\\sigma^2 2\\pi}\\exp\\left(-\\frac{x^2 + y^2}{2\\sigma^2}\\right) \\left(-\\frac{x}{\\sigma^2}\\right)$\n",
+    ">\n",
+    "> $ = -\\frac{x}{2\\pi\\sigma^4} \\exp \\left(-\\frac{x^2+y^2}{2\\sigma^2}\\right)$\n",
+    ">\n",
+    "> $= -\\frac{x}{\\sigma^2}G_{\\sigma}(x,y)$\n",
+    ">\n",
+    ">\n",
+    "> ### b) With respect to $y$\n",
+    ">\n",
+    "> $\\frac{d}{dy}G_\\sigma(x,y)$\n",
+    "> \n",
+    "> $\\frac{d}{dy}G_\\sigma(x,y)= \\frac{d}{dy}\\left(\\frac{1}{\\sigma^2 2\\pi}\\exp\\left(-\\frac{x^2 + y^2}{2\\sigma^2}\\right)\\right)$\n",
+    ">\n",
+    "> Let $u = - \\frac{x^2 + y^2}{2\\sigma^2}$\n",
+    ">\n",
+    "> $\\frac{du}{dy} = -\\frac{2x}{2\\sigma^2} = -\\frac{y}{\\sigma^2}$\n",
+    ">\n",
+    "> $\\frac{d}{dy}G_\\sigma(x,y)= \\frac{1}{\\sigma^2 2\\pi}\\exp\\left(-\\frac{x^2 + y^2}{2\\sigma^2}\\right) \\left(-\\frac{y}{\\sigma^2}\\right)$\n",
+    ">\n",
+    "> $ = -\\frac{y}{2\\pi\\sigma^4} \\exp \\left(-\\frac{x^2+y^2}{2\\sigma^2}\\right)$\n",
+    ">\n",
+    "> $= -\\frac{y}{\\sigma^2}G_{\\sigma}(x,y)$"
    ]
   },
   {
@@ -538,7 +594,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">*Write your answer here.*"
+    "> The second-order derivative of the Gaussian kernel can be useful when dealing with noise robustness, which in turn assists in detecting edges as zero-crossings.\n",
+    ">\n",
+    "> One example of a second-order derivative kernel is the **\"Laplacian of Gaussian\"**, or the LoG in short. It represents the sum of second-order derivatives, which are then applied to a Gaussian kernel that is typically used in pre-smoothing images."
    ]
   },
   {
@@ -622,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,12 +697,16 @@
     "\n",
     "    # YOUR CODE HERE\n",
     "\n",
+    "    cos_theta = np.cos(theta)\n",
+    "    sin_theta = np.sin(theta)\n",
+    "    rot_matrix =  np.array([[cos_theta, sin_theta], [-sin_theta, cos_theta]])\n",
+    "\n",
     "    return rot_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,12 +725,14 @@
     "\n",
     "    # YOUR CODE HERE\n",
     "\n",
+    "    cos_carrier = np.cos(2 * np.pi  * (rot_x / lamda) + psi)\n",
+    "\n",
     "    return cos_carrier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,12 +751,14 @@
     "\n",
     "    # YOUR CODE HERE\n",
     "\n",
+    "    sin_carrier = np.sin(2 * np.pi  * (rot_x / lamda) + psi)\n",
+    "\n",
     "    return sin_carrier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,6 +777,10 @@
     "    '''\n",
     "\n",
     "    # YOUR CODE HERE\n",
+    "\n",
+    "    num = rot_x ** 2 + (gamma ** 2) * (rot_y ** 2)\n",
+    "    denom  = 2 * (sigma ** 2)\n",
+    "    gauss_env = np.exp(-num / denom)\n",
     "\n",
     "    return gauss_env"
    ]
@@ -744,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,33 +836,68 @@
     "    # Set the aspect ratio.\n",
     "    # YOUR CODE HERE\n",
     "\n",
+    "    sigma_x = sigma\n",
+    "    sigma_y = sigma / gamma\n",
+    "\n",
     "    # Generate a grid\n",
     "    # YOUR CODE HERE\n",
+    "\n",
+    "    n_stds = 3\n",
+    "    x_max = max(abs(n_stds * sigma_x * np.cos(theta)), abs(n_stds * sigma_x * np.sin(theta)))\n",
+    "    y_max = max(abs(n_stds * sigma_y * np.cos(theta)), abs(n_stds * sigma_y * np.sin(theta)))\n",
+    "    x_max = np.ceil(max(1, x_max))\n",
+    "    y_max = np.ceil(max(1, y_max))\n",
     "\n",
     "    # Make sure that we get square filters.\n",
     "    # YOUR CODE HERE\n",
     "\n",
+    "    x_max = max(x_max, y_max)\n",
+    "    y_max = max(x_max, y_max)\n",
+    "    x_min = -x_max\n",
+    "    y_min = -y_max\n",
+    "\n",
     "    # Generate a coordinate system in the range [xmin, xmax] and [ymin, ymax].\n",
     "    # YOUR CODE HERE\n",
+    "\n",
+    "    x = np.arange(x_min, x_max +1)\n",
+    "    y = np.arange(y_min, y_max +1)\n",
+    "    X, Y = np.meshgrid(x, y)\n",
     "\n",
     "    # Convert to a 2-by-N matrix where N is the number of pixels in the kernel.\n",
     "    # YOUR CODE HERE\n",
     "\n",
+    "    xy = np.vstack([X.ravel(), Y.ravel()])\n",
+    "\n",
     "    # Compute the rotation of pixels by theta.\n",
     "    # YOUR CODE HERE\n",
+    "\n",
+    "    R = generate_rotation_matrix(theta)\n",
+    "    rot_xy = np.matmul(R, xy)\n",
+    "    rot_x = rot_xy[0, :].reshape(X.shape)\n",
+    "    rot_y = rot_xy[1, :].reshape(Y.shape)\n",
     "\n",
     "    # Create the Gaussian envelope.\n",
     "    # YOUR CODE HERE\n",
     "\n",
+    "    gauss_env = create_gauss(rot_x, rot_y, gamma, sigma)\n",
+    "\n",
     "    # Create the orthogonal carrier signals.\n",
     "    # YOUR CODE HERE\n",
+    "\n",
+    "    cos_carrier = create_cos(rot_x, lambda_, psi)\n",
+    "    sin_carrier = create_sin(rot_x, lambda_, psi)\n",
     "\n",
     "    # Modulate (multiply) Gaussian envelope with the carriers to compute\n",
     "    # the real and imaginary components of the complex Gabor filter.\n",
     "    # YOUR CODE HERE\n",
     "\n",
+    "    my_gabor_real = gauss_env * cos_carrier\n",
+    "    my_gabor_imag = gauss_env * sin_carrier\n",
+    "\n",
     "    # Pack my_gabor_real and my_gabor_imaginary into my_gabor.\n",
     "    # YOUR CODE HERE\n",
+    "\n",
+    "    my_gabor = np.stack([my_gabor_real, my_gabor_imag], axis = -1)\n",
     "\n",
     "    return my_gabor"
    ]
@@ -814,11 +919,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "lambda_ = 30\n",
+    "psi = 0 \n",
+    "sigma = 10\n",
+    "gamma = 0.25\n",
+    "\n",
+    "thetas = [0, np.pi / 4, np.pi / 2]\n",
+    "titles = ['Theta 0', 'Theta = pi / 4', 'Theta = pi / 2']\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 3, figsize = (15, 5))\n",
+    "\n",
+    "for i, theta in enumerate(thetas):\n",
+    "    gabor = create_gabor(sigma, theta, lambda_, psi, gamma)\n",
+    "\n",
+    "    gabor_real = gabor[:, :, 0]\n",
+    "    gabor_norm = (gabor_real - gabor_real.min()) / (gabor_real.max() -  gabor_real.min())\n",
+    "\n",
+    "    im = axes[i].imshow(gabor_norm)\n",
+    "    axes[i].set_title(titles[i])\n",
+    "    axes[i].set_xticks([])\n",
+    "    axes[i].set_yticks([])\n",
+    "    plt.colorbar(im, ax = axes[i])\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -838,11 +967,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "lambda_ = 35\n",
+    "theta = np.pi / 6\n",
+    "psi =  np.pi / 4\n",
+    "gamma = 0.5\n",
+    "\n",
+    "sigmas = [10, 30, 45]\n",
+    "titles = ['Sigma = 10', 'Sigma = 30', 'Sigma = 45']\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 3, figsize = (15, 5))\n",
+    "\n",
+    "for i, sigma in enumerate(sigmas):\n",
+    "    gabor = create_gabor(sigma, theta, lambda_, psi, gamma)\n",
+    "\n",
+    "    gabor_real = gabor[:, :, 0]\n",
+    "    gabor_norm = (gabor_real - gabor_real.min()) / (gabor_real.max() -  gabor_real.min())\n",
+    "\n",
+    "    im = axes[i].imshow(gabor_norm)\n",
+    "    axes[i].set_title(titles[i])\n",
+    "    axes[i].set_xticks([])\n",
+    "    axes[i].set_yticks([])\n",
+    "    \n",
+    "    plt.colorbar(im, ax = axes[i])\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -862,11 +1016,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "lambda_ = 25\n",
+    "theta = np.pi / 3\n",
+    "psi =  np.pi / 6\n",
+    "sigma = 8\n",
+    "\n",
+    "gammas = [0.25, 0.5, 0.75 ]\n",
+    "titles = ['Gamma = 0.25', 'Gamma = 0.5', 'Gamma = 0.75']\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 3, figsize = (15, 5))\n",
+    "\n",
+    "for i, gamma in enumerate(gammas):\n",
+    "    gabor = create_gabor(sigma, theta, lambda_, psi, gamma)\n",
+    "\n",
+    "    gabor_real = gabor[:, :, 0]\n",
+    "    gabor_norm = (gabor_real - gabor_real.min()) / (gabor_real.max() -  gabor_real.min())\n",
+    "\n",
+    "    im = axes[i].imshow(gabor_norm)\n",
+    "    axes[i].set_title(titles[i])\n",
+    "    axes[i].set_xticks([])\n",
+    "    axes[i].set_yticks([])\n",
+    "    plt.colorbar(im, ax = axes[i])\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -888,7 +1066,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">*Write your answer here.*"
+    "> I) \n",
+    ">\n",
+    "> - **Theta**: It controls the orientation of the Gabor filter.\n",
+    ">\n",
+    "> - **Gamma**: It controls the height of the envelope. \n",
+    ">\n",
+    "> - **Sigma**: It is the standard deviation of the function. It controls the overall size of the envelope.\n",
+    ">\n",
+    "> - **Lambda**: It represents the wavelength, which controls the width of the strips.\n",
+    ">\n",
+    "> - **Psi**: It controls the phase offset.\n",
+    ">\n",
+    "> II)\n",
+    ">\n",
+    "> - **Theta**: This value rotates the filter kernel. At zero degrees, the Gabor function is positioned vertically. The more this value increases, the more it leans horizontally.\n",
+    ">\n",
+    "> - **Gamma**: The smaller this value is, the more elongated the function becomes. However, at larger values, the envelope loses height and becomes rounder.\n",
+    ">\n",
+    "> - **Sigma**: The greater this value is, the more stripes appear. The opposite happens when the value decreases.\n",
+    ">\n",
+    "> - **Lambda**: The larger the value is, the more the envelope increases in width. The shape decreases in width as the value becomes smaller.\n",
+    ">\n",
+    "> - **Psi**: The psi shifts the stripe relative to the center. "
    ]
   },
   {
