--- a/cv1-lab-2.ipynb
+++ b/cv1-lab-2.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +872,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">*Write your answer here.*"
+    "When we compared different image enhancement methods using the PSNR metric, to assess the desired level of the PSNR metric, we can theorize evaluating all methods on a single picture. In that case, I is constant (it is the same baseline image for all methods). Consequently, we can treat I_max as constant too (the maximum possible pixel value will also be constant for the same image across the different enhancement methods). In the formula for the PSNR, the only variable dependent on the enhanced image (hence the enhancement method) is the RMSE. Expanding the formula further, we get that  \\\n",
+    "$PSNR = 20 \\cdot \\log_{10} \\left(\\frac{\\mathbf{I}_{max}}{RMSE}\\right)\\\\\n",
+    "= 20 \\cdot \\log_{10} \\left(\\frac{\\mathbf{I}_{max}}{RMSE}\\right)$ = 20 \\cdot \\log_{10} \\left(\\frac{\\mathbf{I}_{max}}{RMSE}\\right)$"
    ]
   },
   {
@@ -891,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
